# conference

./: .gitignore  INSTRUCTIONS.md  README.md  main.py  pyproject.toml
configs/: confusion_cross_to_primary.yaml  confusion_grass_to_cross.yaml  disambiguators.yaml  letters_dictionary.txt  model_letters.yaml  model_letters_combined.yaml  model_letters_combined_eval_cross.yaml  model_letters_combined_eval_primary.yaml  model_letters_cross_dataset.yaml  model_letters_primary_eval_cross_model.yaml  model_words_asl_citizen.yaml  model_words_combined.yaml  model_words_msasl.yaml  model_words_sequence_combined.yaml  model_words_sequence_combined_gpu.yaml  pair_analysis_cross_to_primary.yaml  pair_analysis_grass_to_cross.yaml  runtime_confusion_grass_to_cross.yaml
data/processed/: asl_citizen_words_features.summary.json  (+8 more)
experiments/: __init__.py
experiments/words/: README.md  (+3 more)
scripts/: analyze_confusion_matrix.py  analyze_letter_pairs.py  analyze_runtime_confusion.py  build_asl_citizen_word_manifest.py  build_msasl_word_manifest.py  calibrate_word_rejection.py  download_msasl_word_videos.py  eval_words.py  eval_words_sequence.py  evaluate_letters.py  extract_asl_citizen_word_subset.py  merge_letter_feature_csvs.py  prepare_asl_alphabet.py  prepare_msasl_word_features.py  train_disambiguators.py  train_letters.py  train_words.py  train_words_sequence.py  train_words_winner.py
src/: __init__.py
tests/: test_api.py  test_letters.py  test_postprocess.py  test_sequence_frame_extract.py  test_state.py  test_tts.py  test_word_segmenter.py  test_words.py  test_words_sequence.py
(+104 files in other folders)
