[project]
name = "conference"
version = "0.1.0"
description = "ASL recognition MVP: live fingerspelling, word classification, and multi-sign sequences (FastAPI + MediaPipe)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "kaggle>=2.0.1",
    "lightgbm>=4.6.0",
    "mediapipe>=0.10.33",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "piper-tts>=1.4.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
